--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".RegisterActivity"></activity>
+        <activity android:name=".UpdateDietActivity"></activity>
+        <activity android:name=".DietActivity" />
+        <activity android:name=".AdminChooseActivity" />
+        <activity android:name=".AddDetailsActivity" />
+        <activity android:name=".RegisterActivity" />
         <activity android:name=".HomeActivity" />
         <activity android:name=".AdminActivity" />
         <activity android:name=".LoginActivity" />
