--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".UpdateDietActivity"></activity>
+        <activity android:name=".PatientDetailsActivity"></activity>
+        <activity android:name=".UserHomeActivity" />
+        <activity android:name=".AdminEditDetailsActivity" />
+        <activity android:name=".AdminRetrieveActivity" />
+        <activity android:name=".AddActivity" />
+        <activity android:name=".UserDietDisplayActivity" />
+        <activity android:name=".UserDietDayActivity" />
+        <activity android:name=".UpdateDietActivity" />
         <activity android:name=".DietActivity" />
         <activity android:name=".AdminChooseActivity" />
-        <activity android:name=".AddDetailsActivity" />
         <activity android:name=".RegisterActivity" />
         <activity android:name=".HomeActivity" />
         <activity android:name=".AdminActivity" />
