--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".PatientDetailsActivity"></activity>
+        <activity android:name=".User1Activity"></activity>
+        <activity android:name=".PatientDetailsActivity" />
         <activity android:name=".UserHomeActivity" />
         <activity android:name=".AdminEditDetailsActivity" />
         <activity android:name=".AdminRetrieveActivity" />
@@ -20,9 +21,7 @@
         <activity android:name=".DietActivity" />
         <activity android:name=".AdminChooseActivity" />
         <activity android:name=".RegisterActivity" />
-        <activity android:name=".HomeActivity" />
         <activity android:name=".AdminActivity" />
-        <activity android:name=".LoginActivity" />
         <activity android:name=".WelcomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
