--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".User1Activity"></activity>
+        <activity android:name=".UserCasesDisplayActivity"></activity>
+        <activity android:name=".UserCasesActivity" />
+        <activity android:name=".AdminStateActivity" />
+        <activity android:name=".AdminUpdateCasesActivity" />
+        <activity android:name=".User1Activity" />
         <activity android:name=".PatientDetailsActivity" />
         <activity android:name=".UserHomeActivity" />
         <activity android:name=".AdminEditDetailsActivity" />
